projects/chloria-cnpg/base/ocean/networkpolicy.yaml
---
# Doc: https://doc.crds.dev/github.com/cilium/cilium/cilium.io/CiliumNetworkPolicy/v2@1.16.5
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-cluster
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: chloria-cnpg-cluster
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: core-cnpg-operator
    # More values will be added here. Ref: `../../overlays/${environment}/networkpolicy_patch.yaml` file
